--- a/src/app/kids/kids.component.html
+++ b/src/app/kids/kids.component.html
@@ -1,8 +1,6 @@
 <p>kids works!</p>
 
-<div class="card-group">
-<div class="row">
-    <div class="column">
+<div class="card-column">
     <div class="card">
         <div class="content">
             <div class="front">
@@ -10,8 +8,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card25" class="more">
         <div class="content">
@@ -28,9 +24,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Freunde</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2017</div>
                     <div class="details">FSK0</div>
                     <div class="details">2 Staffeln</div> 
@@ -42,8 +38,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card26" class="more">
         <div class="content">
@@ -60,9 +54,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Action Park</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2012</div>
                     <div class="details">FSK6</div>
                     <div class="details">2 Staffeln</div> 
@@ -74,10 +68,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div class="row">
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card27" class="more">
         <div class="content">
@@ -94,9 +84,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Spielkinder</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2019</div>
                     <div class="details">FSK0</div>
                     <div class="details">5 Staffeln</div> 
@@ -108,8 +98,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card28" class="more">
         <div class="content">
@@ -126,9 +114,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Weihnachtsmann und Co.KG</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2012</div>
                     <div class="details">FSK0</div>
                     <div class="details">7 Staffeln</div> 
@@ -140,8 +128,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card29" class="more">
         <div class="content">
@@ -158,9 +144,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Heidi und Peter</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2014</div>
                     <div class="details">FSK6</div>
                     <div class="details">3 Staffeln</div> 
@@ -172,10 +158,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div class="row">
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card30" class="more">
         <div class="content">
@@ -192,9 +174,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Spongebob Schwammkopf</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2010</div>
                     <div class="details">FSK6</div>
                     <div class="details">10 Staffeln</div> 
@@ -205,23 +187,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-    <div class="column">
-        <div class="card">
-            <div class="content">
-                <div class="front">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="column">
-         <div class="card">
-            <div class="content">
-                <div class="front">
-                </div>
-            </div>
-        </div>
-    </div>
     </div>
 </div>
