--- a/src/app/komoedien/komoedien.component.html
+++ b/src/app/komoedien/komoedien.component.html
@@ -1,8 +1,6 @@
 <p>komoedien works!</p>
 
-<div class="card-group">
-<div class="row">
-    <div class="column">
+<div class="card-column">
     <div class="card">
         <div class="content">
             <div class="front">
@@ -10,8 +8,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card7" class="more">
         <div class="content">
@@ -28,9 +24,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Love Time</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2016</div>
                     <div class="details">FSK12</div>
                     <div class="details">4 Staffeln</div> 
@@ -42,8 +38,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card8" class="more">
         <div class="content">
@@ -60,9 +54,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Nah und Fern</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2013</div>
                     <div class="details">FSK12</div>
                     <div class="details">1 Staffel</div> 
@@ -74,10 +68,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div class="row">
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card9" class="more">
         <div class="content">
@@ -94,9 +84,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Maybe forever</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2017</div>
                     <div class="details">FSK6</div>
                     <div class="details">2 Staffeln</div> 
@@ -108,8 +98,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card10" class="more">
         <div class="content">
@@ -126,9 +114,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Urlaub in den Bergen</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2013</div>
                     <div class="details">FSK6</div>
                     <div class="details">1 Staffel</div> 
@@ -140,8 +128,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card11" class="more">
         <div class="content">
@@ -158,9 +144,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Moderne Familie</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2015</div>
                     <div class="details">FSK12</div>
                     <div class="details">6 Staffeln</div> 
@@ -172,10 +158,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div class="row">
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card12" class="more">
         <div class="content">
@@ -192,9 +174,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Wie ich Deine Mutter kennengelernt habe</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2005</div>
                     <div class="details">FSK12</div>
                     <div class="details">7 Staffeln</div> 
@@ -205,23 +187,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="card">
-        <div class="content">
-            <div class="front">
-            </div>
-        </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="card">
-        <div class="content">
-            <div class="front">
-            </div>
-        </div>
-    </div>
-    </div>
     </div>
 </div>
