--- a/src/app/my-list/my-list.component.html
+++ b/src/app/my-list/my-list.component.html
@@ -1,4 +1,4 @@
-<div class="card-group">
+<div class="card-column">
     <div class="card">
         <input type="checkbox" id="card1" class="more">
         <div class="content">
@@ -15,9 +15,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Anzüge</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2015</div>
                     <div class="details">FSK12</div>
                     <div class="details">6 Staffeln</div> 
@@ -45,9 +45,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Bienchen entdeckt die Welt</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2015</div>
                     <div class="details">FSK6</div>
                     <div class="details">1 Std. 32 Min.</div> 
@@ -75,9 +75,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Maffia</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2016</div>
                     <div class="details">FSK18</div>
                     <div class="details">3 Staffeln</div> 
@@ -89,5 +89,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
