--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -197,6 +197,8 @@
             </div>
         </div>
     </div>
+  </div>
+  <div class="card-column">
     <div class="card">
         <div class="content">
             <div class="front">
@@ -395,6 +397,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="card-column">
     <div class="card">
         <div class="content">
             <div class="front">
@@ -593,6 +597,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="card-column">  
     <div class="card">
         <div class="content">
             <div class="front">
@@ -791,6 +797,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="card-column">
     <div class="card">
         <div class="content">
             <div class="front">
