--- a/src/app/thriller/thriller.component.html
+++ b/src/app/thriller/thriller.component.html
@@ -1,8 +1,6 @@
 <p>thriller works!</p>
 
-<div class="card-group">
-    <div class="row">
-    <div class="column">
+<div class="card-column">
     <div class="card">
         <div class="content">
             <div class="front">
@@ -10,8 +8,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card1" class="more">
         <div class="content">
@@ -28,9 +24,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Letzter Flug</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2014</div>
                     <div class="details">FSK16</div>
                     <div class="details">5 Staffeln</div> 
@@ -42,8 +38,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card2" class="more">
         <div class="content">
@@ -60,9 +54,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Maffia</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2016</div>
                     <div class="details">FSK18</div>
                     <div class="details">3 Staffeln</div> 
@@ -74,10 +68,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div class="row">
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card3" class="more">
         <div class="content">
@@ -94,9 +84,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Stahlwerk</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2012</div>
                     <div class="details">FSK18</div>
                     <div class="details">2 Staffeln</div> 
@@ -108,8 +98,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card4" class="more">
         <div class="content">
@@ -126,9 +114,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Shoot out</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2018</div>
                     <div class="details">FSK16</div>
                     <div class="details">4 Staffeln</div> 
@@ -140,8 +128,6 @@
             </div>
         </div>
     </div>
-    </div>
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card5" class="more">
         <div class="content">
@@ -158,9 +144,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Liars</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2017</div>
                     <div class="details">FSK12</div>
                     <div class="details">7 Staffeln</div> 
@@ -172,10 +158,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    <div class="row">
-    <div class="column">
     <div class="card">
         <input type="checkbox" id="card6" class="more">
         <div class="content">
@@ -192,9 +174,9 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Zombies</h2><br/></div>
-                    <div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
-                    <div class="icons"><span class="fa fa-check"></span></div>
+                    <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2016</div>
                     <div class="details">FSK16</div>
                     <div class="details">10 Staffeln</div> 
@@ -205,23 +187,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="card">
-        <div class="content">
-            <div class="front">
-            </div>
-        </div>
-    </div>
-    </div>
-    <div class="column">
-    <div class="card">
-        <div class="content">
-            <div class="front">
-            </div>
-        </div>
-    </div>
-    </div>
     </div>
 </div>
