--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -6,6 +6,14 @@ body
   -o-background-size: cover
   margin-top: -50px
 
+  
+
+img
+  width: 100%
+  height: auto
+
+  
+  <!--
 .container
   margin-top: 100px
 
@@ -17,3 +25,5 @@ body
       margin-left: 50px
       color: white
       border: none
+      
+      -->
