--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
                     <!-- Links -->
                     <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Rechtlich</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#!">Impressum</a></li>
+                        <li><a href="/impressum">Impressum</a></li>
                         <li><a href="/privacy">Datenschutz</a></li>
                     </ul>
 
