--- a/src/app/my-list/my-list.component.html
+++ b/src/app/my-list/my-list.component.html
@@ -6,24 +6,25 @@
                 <div class="inner">
                     <div class="videoplay">
                         <a href="assets/video.mp4">
-                        <span class="fa fa-play-circle" style="font-size: 50px;"></span>
+                            <span class="fa fa-play-circle" style="font-size: 50px;"></span>
                         </a>
                     </div>
-                    <label for="card1" class="button" aria-hidden="true"><span class="fa fa-sort-down" style="font-size: 40px;"></span></label> 
+                    <label for="card1" class="button" aria-hidden="true"><span class="fa fa-sort-down" style="font-size: 40px;"></span></label>
                 </div>
             </div>
             <div class="back">
                 <div class="inner">
-                    <div class="titel"><h2>Anzüge</h2><br/></div>
+                    <div class="titel">
+                        <h2>Anzüge</h2><br/></div>
                     <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
                     <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2015</div>
                     <div class="details">FSK12</div>
-                    <div class="details">6 Staffeln</div> 
+                    <div class="details">6 Staffeln</div>
                     <div class="description">
                         <p>Der junge Bernd ist Hauptberuflicher Trickbetrüger, doch als er auf dem Höhepunkt seine Karriere als Anwalt ausgibt wird viel von ihm verlangt. Werden seine Chefs es jemals herausfinden oder kann Bernd unentdeckt bleiben?</p>
-                    </div>                
+                    </div>
                     <label for="card1" class="button return" aria-hidden="true"> <span class="fa fa-sort-up" style="font-size: 40px;"></span></label>
                 </div>
             </div>
@@ -36,24 +37,25 @@
                 <div class="inner">
                     <div class="videoplay">
                         <a href="assets/video.mp4">
-                        <span class="fa fa-play-circle" style="font-size: 50px;"></span>
+                            <span class="fa fa-play-circle" style="font-size: 50px;"></span>
                         </a>
                     </div>
-                    <label for="card2" class="button" aria-hidden="true"><span class="fa fa-sort-down" style="font-size: 40px;"></span></label> 
+                    <label for="card2" class="button" aria-hidden="true"><span class="fa fa-sort-down" style="font-size: 40px;"></span></label>
                 </div>
             </div>
             <div class="back">
                 <div class="inner">
-                    <div class="titel"><h2>Bienchen entdeckt die Welt</h2><br/></div>
+                    <div class="titel">
+                        <h2>Bienchen entdeckt die Welt</h2><br/></div>
                     <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
                     <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2015</div>
                     <div class="details">FSK6</div>
-                    <div class="details">1 Std. 32 Min.</div> 
+                    <div class="details">1 Std. 32 Min.</div>
                     <div class="description">
                         <p>Die junge Biene Lilli darf zum ersten Mal das Bienennest verlassen und entdeckt die große Welt außerhalb des Bienenstocks.</p>
-                    </div>                    
+                    </div>
                     <label for="card2" class="button return" aria-hidden="true"> <span class="fa fa-sort-up" style="font-size: 40px;"></span></label>
                 </div>
             </div>
@@ -66,29 +68,28 @@
                 <div class="inner">
                     <div class="videoplay">
                         <a href="assets/video.mp4">
-                        <span class="fa fa-play-circle" style="font-size: 50px;"></span>
+                            <span class="fa fa-play-circle" style="font-size: 50px;"></span>
                         </a>
                     </div>
-                    <label for="card3" class="button" aria-hidden="true"><span class="fa fa-sort-down" style="font-size: 40px;"></span></label> 
+                    <label for="card3" class="button" aria-hidden="true"><span class="fa fa-sort-down" style="font-size: 40px;"></span></label>
                 </div>
             </div>
             <div class="back">
                 <div class="inner">
-                    <div class="titel"><h2>Maffia</h2><br/></div>
+                    <div class="titel">
+                        <h2>Maffia</h2><br/></div>
                     <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
                     <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2016</div>
                     <div class="details">FSK18</div>
-                    <div class="details">3 Staffeln</div> 
+                    <div class="details">3 Staffeln</div>
                     <div class="description">
-                        <p>Der Maffiaboss Frank macht viel Geld in der Drogenszene doch sein Cousin Paul will ihm Konkurrenz machen.  Das endet in einem blutigen Krieg.</p>
-                    </div>                    
+                        <p>Der Maffiaboss Frank macht viel Geld in der Drogenszene doch sein Cousin Paul will ihm Konkurrenz machen. Das endet in einem blutigen Krieg.</p>
+                    </div>
                     <label for="card3" class="button return" aria-hidden="true"> <span class="fa fa-sort-up" style="font-size: 40px;"></span></label>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</div>
-
