--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -155,6 +155,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <div class="card">
             <input type="checkbox" id="card3" class="more">
             <div class="content">
@@ -355,6 +356,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <div class="card">
             <input type="checkbox" id="card7" class="more">
             <div class="content">
@@ -555,6 +557,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <div class="card">
             <input type="checkbox" id="card11" class="more">
             <div class="content">
@@ -755,6 +758,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <div class="card">
             <input type="checkbox" id="card15" class="more">
             <div class="content">
@@ -955,6 +959,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <div class="card">
             <input type="checkbox" id="card19" class="more">
             <div class="content">
@@ -998,5 +1003,3 @@
             </div>
         </div>
 </div>
-
-
