--- a/src/app/series/series.component.html
+++ b/src/app/series/series.component.html
@@ -775,7 +775,7 @@
             <div class="back">
                 <div class="inner">
                     <div class="titel"><h2>Kindsmörder</h2><br/></div>
-                    <1--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
+                    <!--<div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
                     <div class="icons"><span class="fa fa-check"></span></div>-->
                     <div class="details">2016</div>
