--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -190,7 +190,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/thriller">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -391,7 +391,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/komoedien">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -592,7 +592,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/drama">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -793,7 +793,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/horror">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -994,7 +994,7 @@
             <div class="content">
                 <div class="front">
                     <div class="more-videos">
-                        <a href="">
+                        <a href="/kids">
                             <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                             <h4>More</h4>
                         </a>
