--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@
                     <!-- Links -->
                     <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Account</h5>
                     <ul class="list-unstyled">
-                        <li><a href="">Konto-Details</a></li>
+                        <li><a href="/konto-details">Konto-Details</a></li>
                         <li><a href="/login">Abmelden</a></li>
                     </ul>
                 </div>
