--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,119 @@
-<p>sign-up works!</p>
+<div class="card-group" style="margin-top: -425px; width: 15%; height: 650px;">
+    <div class="card" style="background-color: rgba(0, 0, 0, 0); border: none;">
+        <img src="\assets\img\logo\Chillwatcher-Logo-Quadrat-Kreis-3.png"
+            alt="Hier sollte das ChillWatcher-Logo zu sehen sein">
+    </div>
+</div>
+<div class="card-group">
+    <div class="card">
+        <span style="color:#00e5ff;font-weight: bold"> <h2>Registrierung</h2></span>
+        <span style="color:#00e5ff"><h6>(Für eine erfolgreiche Registrierung müssen Sie alle Felder ausfüllen)</h6></span>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Prename</label>
+                <input type="text" class="form-control" id="prename"
+                    placeholder="Enter your prename" style="color: white;">
+                <small class="form-text text-muted">
+                   Please enter your prename.
+                </small>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">Last name</label>
+                <input type="text" class="form-control" id="lastname"
+                    placeholder="Enter your last name" style="color: white;">
+                <small class="form-text text-muted">
+                    Please enter your last name.
+                </small>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">street</label>
+                <input type="text" class="form-control" id="street"
+                    placeholder="Enter your street" style="color: white;">
+                <small class="form-text text-muted">
+                        Please enter your street.
+                </small>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">House number</label>
+                <input type="text" class="form-control" id="number"
+                    placeholder="Enter your house number" style="color: white;">
+                <small class="form-text text-muted">
+                    Please enter your house number.
+                </small>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">Post code</label>
+                <input type="text" class="form-control" id="postcode"
+                    placeholder="Enter your post code" style="color: white;">
+                <small class="form-text text-muted">
+                    Please enter your post code.
+                </small>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputEmail1">City</label>
+                <input type="text" class="form-control" id="city"
+                    placeholder="Enter your city" style="color: white;">
+                <small class="form-text text-muted">
+                    Please enter your city.
+                </small>
+            </div>
+           
+            <div class="form-group">
+                <label for="exampleInputEmail1">Select an abo: &ensp;</label>
+                <input type="radio" name="abo" id="basic"> Basic (7,99€) &emsp; 
+                <input type="radio" name="abo" id="standard"> Standard (11,99€) &emsp; 
+                <input type="radio" name="abo" id="premium"> Premium (15,99€)
+            </div>
+            
+            <div class="form-group">
+                <label for="exampleInputEmail1">IBAN</label>
+                <input type="text" class="form-control" id="iban"
+                    placeholder="Enter your IBAN" style="color: white;">
+                <small class="form-text text-muted">
+                    Please enter your IBAN.
+                </small>
+                <br>
+            </div>
+
+            <div class="form-group">
+                <input type="checkbox" name="authorization" id="check"> &ensp; I accept all conditions.
+                <small class="form-text text-muted">
+                    You have to agree the conditions.
+                </small>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter your email" style="color: white;">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword5">Password</label>
+                <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
+                    placeholder="Enter your password" style="color: white;">
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain
+                    spaces,
+                    special characters, or emoji.
+                </small>
+            </div>
+            <div class="form-group">
+                <label for="inputPasswordR">Confirm Password</label>
+                <input type="password" id="inputPasswordR" class="form-control" aria-describedby="passwordHelpBlock"
+                    placeholder="Enter your password again" style="color: white;">
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                    Repeat your password.
+                </small>
+            </div>
+            <button onclick="myRegistration()" type="submit" id="signupButton" class="btn btn-primary"><a id="loginLink"
+                href="home.html">Registrieren</a></button>
+        </form>
+    </div>
+</div>
