--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="card-group" style="margin-top: -425px; width: 15%; height: 650px;">
     <div class="card" style="background-color: rgba(0, 0, 0, 0); border: none;">
-        <img src="img/Logo/Chillwatcher-Logo-Quadrat-Kreis-3.svg"
+        <img src="\assets\img\logo\Chillwatcher-Logo-Quadrat-Kreis-3.png"
             alt="Hier sollte das ChillWatcher-Logo zu sehen sein">
     </div>
 </div>
