--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<br> <br>
+<br>
 
 <div class="container h-100">
     <div class="d-flex align-items-center  h-100">
         <div class="mx-auto bg-danger">
-            <!-- <carousel>
+            <carousel>
                 <slide>
           <img class="img-main-carusel" src="assets\img\carousel\logo-carousel.PNG" alt="first slide" style="display: block; height: 500px; width: 1000px;">
           <div class="carousel-caption d-none d-md-block">
@@ -25,7 +25,7 @@
             <p><font color="#00e5ff">Schaue Serien wann immer du willst</font></p>
           </div>
         </slide>
-            </carousel> -->
+            </carousel> 
         </div>
     </div>
 </div>
@@ -34,6 +34,7 @@
 <hr style="height: 5px; width: 100%; background-color: #00e5ff; border: 0;" />
 
 <br><br>
+
 
 <h3 style='text-align:center'>
     <a>
@@ -44,6 +45,7 @@
     <font color="#00e5ff" size="4">In kurzer Zeit erwartet dich hier eine große Überraschung!</font>
 </p>
 <hr style="height: 1px; width: 50%; background-color: #00e5ff; border: 0;" />
+
 <a style='text-align:center'>
     <font color="#00e5ff" size="6">
         <countdown units="Days | Hours | Minutes | Seconds" end="December 24, 2019"></countdown>
@@ -57,42 +59,96 @@
 <br>
 
 <p style='text-align:center'>
-    <font color="#00e5ff" size="6"><strong>Serie der Woche</strong></font>
+    <font color="#00e5ff" size="6"><strong>Top 3 Serie der Woche</strong></font>
 </p>
 
-<div class="column">
-    <div class="row">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="assets/img/Serien/weihnachtsmann_ und_co._kg_s.jpg" alt="Card image cap">
-            <div class="card-body">
-                <p class="card-text">Der Weihnachtsmann beschenkt mithilfe seiner fleißigen Elfen die Kinder in ganz Ravensburg, dabei passieren ihm einige Missgeschicke.</p>
-                <a href="assets/video.mp4" class="card-link">Serie sofort ansehen</a>
-            </div>
-        </div>
-    </div>
-</div>
+<hr style="height: 1px; width: 25%; background-color: #00e5ff; border: 0;" />
 
+<div class="card-deck" style="margin-left: 100px; margin-right: 100px">
+    <div class="card" style="margin-right: 100px; text-align: center;">
+      <img class="card-img-top" src="assets/img/Serien/letzter_flug_s.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Das Team um Manfred besitzt einen Heißluftballon mit denen sie Rundflüge anbieten. Doch sie kommen in Verdacht der Polizei da immer mehr Gäste nicht mehr lebend heimkommen.</p>
+        <a href="assets/video.mp4" class="card-link">Serie sofort ansehen</a>
+    </div>
+      <div class="card-footer">
+        <small class="text-muted">Thriller - FSK16 - 5 Staffeln</small>
+      </div>
+    </div>
+    <div class="card" style="margin-right: 100px; text-align: center;">
+      <img class="card-img-top" src="assets/img/Serien/unbekannte_dinge_s.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Die Gang Chillwatcher, eine Gruppe von Jugendlichen, trifft auf den mysteriösen Paul. Dieser stellt das Leben der Gang buchstäblich auf den Kopf. Und sie wissen nicht mehr ob sie Dinge vergessen oder noch nie gehört haben.
+        </p>
+        <a href="assets/video.mp4" class="card-link">Serie sofort ansehen</a>
+    </div>
+      <div class="card-footer">
+        <small class="text-muted">Horror - FSK16 - 4 Staffeln</small>
+      </div>
+    </div>
+    <div class="card" style="text-align: center;">
+      <img class="card-img-top" src="assets/img/Serien/weihnachtsmann_ und_co._kg_s.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Der Weihnachtsmann beschenkt mithilfe seiner fleißigen Elfen die Kinder in ganz Ravensburg, dabei passieren ihm einige Missgeschicke.</p>
+        <a href="assets/video.mp4" class="card-link">Serie sofort ansehen</a>
+    </div>
+      <div class="card-footer">
+        <small class="text-muted">Kids - FSK0 - 7 Staffeln</small>
+      </div>
+    </div>
+  </div>
+<br>
 <br>
 <hr style="height: 5px; width: 100%; background-color: #00e5ff; border: 0;" />
 <br>
+<br>
 <p style='text-align:center'>
-    <font color="#00e5ff" size="6"><strong>Film der Woche</strong></font>
+    <font color="#00e5ff" size="6"><strong>Top 3 Filme der Woche</strong></font>
 </p>
 
-<div class="column">
-    <div class="card" style="width: 18rem; text-align: center;">
-        <img class="card-img-top" src="assets/img/Filme/der_letzte_schritt_f.jpg" alt="Card image cap">
-        <div class="card-body">
-            <p class="card-text">Louis ist ein Außenseiter. Er versucht alles um Anschluss zu finden und so lässt er sich auf eine lebensgefährliche Mutprobe ein. Gemäß dem Motto „alles oder nichts“..</p>
-            <a href="assets/video.mp4" class="card-link">Film sofort ansehen</a>
-        </div>
-    </div>
-</div>
+<hr style="height: 1px; width: 25%; background-color: #00e5ff; border: 0;" />
 
-<br>
+<div class="card-deck" style="margin-left: 100px; margin-right: 100px">
+    <div class="card" style="margin-right: 100px; text-align: center;">
+      <img class="card-img-top" src="assets/img/Filme/der_letzte_schritt_f.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Louis ist ein Außenseiter. Er versucht alles um Anschluss zu finden und so lässt er sich auf eine lebensgefährliche Mutprobe ein. Gemäß dem Motto „alles oder nichts“.</p>
+        <a href="assets/video.mp4" class="card-link">Film sofort ansehen</a>
+    </div>
+      <div class="card-footer">
+        <small class="text-muted">Drama - FSK16 - 1 Std. 48 Min.</small>
+      </div>
+    </div>
+    <div class="card" style="margin-right: 100px; text-align: center;">
+      <img class="card-img-top" src="assets/img/Filme/beste_freunde_f.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Benny ist ein Hund zugelaufen. Obwohl er bisher wenig mit Tieren anfangen konnte, merkt er schnell, dass Bello ein ganz besonderer Hund ist...</p>
+        <a href="assets/video.mp4" class="card-link">Film sofort ansehen</a>
+    </div>
+      <div class="card-footer">
+        <small class="text-muted">Komödie - FSK 6 - 1 Std. 56 Min.</small>
+      </div>
+    </div>
+    <div class="card" style="text-align: center;">
+      <img class="card-img-top" src="assets/img/Filme/fight_f.jpg" alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Mike hat einen Traum: Er will unbedingt Basketballprofi werden. Damit er diesem Traum näherkommt, wechselt er in ein Internat. Zu Beginn hat er einige Startschwierigkeiten. Findet er zurück zu alter Stärke?</p>
+        <a href="assets/video.mp4" class="card-link">Film sofort ansehen</a>
+    </div>
+      <div class="card-footer">
+        <small class="text-muted">Kids - FSK6 - 1 Std. 55 Min.</small>
+      </div>
+    </div>
+  </div>
+
+<br><br>
 <hr style="height: 5px; width: 100%; background-color: #00e5ff; border: 0;" />
 <br>
 
 
 <img style="text-align: center;" src="assets/img/werbung.PNG" alt="Hier könnte Ihre Werbung stehen">
-<img style="text-align: center;" src="assets/img/logo/ChillWatcher-Logo-Quadrat-Kreis-3.svg" alt="Hier sollte das ChillWatcher-Logo zu sehen sein">
+
+
+
+<br>
+<hr style="height: 5px; width: 100%; background-color: #00e5ff; border: 0;" />
