--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,7 @@
 <br>
 
 <p style='text-align:center'>
-    <font color="#00e5ff" size="6"><strong>Top 3 Serie der Woche</strong></font>
+    <font color="#00e5ff" size="6"><strong>Top 3 Serien der Woche</strong></font>
 </p>
 
 <hr style="height: 1px; width: 25%; background-color: #00e5ff; border: 0;" />
