--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,14 @@
+<br>
 <div class="card-group" style="margin-top: -425px; width: 15%; height: 650px;">
     <div class="card" style="background-color: rgba(0, 0, 0, 0); border: none;">
-        <img src="\assets\img\logo\Chillwatcher-Logo-Quadrat-Kreis-3.png"
+        <img src="\assets\img\logo\cw.svg"
             alt="Hier sollte das ChillWatcher-Logo zu sehen sein">
     </div>
 </div>
 <div class="card-group">
     <div class="card">
         <h2>Login</h2>
+        <hr>
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
