--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,13 +1,15 @@
+<br>
 <div class="card-group" style="margin-top: -425px; width: 15%; height: 650px;">
     <div class="card" style="background-color: rgba(0, 0, 0, 0); border: none;">
-        <img src="\assets\img\logo\Chillwatcher-Logo-Quadrat-Kreis-3.png"
+        <img src="\assets\img\logo\cw.svg"
             alt="Hier sollte das ChillWatcher-Logo zu sehen sein">
     </div>
 </div>
 <div class="card-group">
     <div class="card">
-        <span style="color:#00e5ff;font-weight: bold"> <h2>Registrierung</h2></span>
-        <span style="color:#00e5ff"><h6>(Für eine erfolgreiche Registrierung müssen Sie alle Felder ausfüllen)</h6></span>
+        <span style="font-weight: bold"> <h2>Registrierung</h2></span>
+        <span><h6>(Für eine erfolgreiche Registrierung müssen Sie alle Felder ausfüllen)</h6></span>
+        <hr>
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Prename</label>
