--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,21 +5,21 @@
         <div class="mx-auto bg-danger">
             <carousel>
                 <slide>
-          <img class="img-main-carusel" src="assets\img\carousel\logo-carousel.PNG" alt="first slide" style="display: block; height: 500px; width: 1000px;">
+          <img class="img-main-carusel" src="assets\img\carousel\logo-carousel.PNG" alt="first slide" style="display: block; height: 50%; width: 100%;">
           <div class="carousel-caption d-none d-md-block">
               <h3><a class="btn btn-default" href="/home"><font color="#00e5ff" size="6"><strong>ChillWatcher</strong></font></a></h3>
             <p><font color="#00e5ff">Better than Netflix</font></p>
           </div>
         </slide>
         <slide>
-          <img class="img-main-carusel" src="assets\img\carousel\filme-carousel.webp" alt="second slide" style="display: block; height: 500px; width: 1000px;">
+          <img class="img-main-carusel" src="assets\img\carousel\filme.jpg" alt="second slide" style="display: block; height: 50%; width: 100%;">
           <div class="carousel-caption d-none d-md-block">
             <h3><a class="btn btn-default" href="/movies"><font color="#00e5ff" size="6"><strong>Filme</strong></font></a></h3>
             <p><font color="#00e5ff">Entdecke jetzt all unsere Filme</font></p>
           </div>
         </slide>
         <slide>
-          <img class="img-main-carusel" src="assets\img\carousel\serien-carousel.webp" alt="third slide" style="display: block;height: 500px; width: 1000px;">
+          <img class="img-main-carusel" src="assets\img\carousel\serien.jpg" alt="third slide" style="display: block;height: 50%; width: 100%;">
           <div class="carousel-caption d-none d-md-block">
               <h3><a class="btn btn-default" href="/series"><font color="#00e5ff" size="6"><strong>Serien</strong></font></a></h3>
             <p><font color="#00e5ff">Schaue Serien wann immer du willst</font></p>
@@ -29,6 +29,7 @@
         </div>
     </div>
 </div>
+
 
 <br><br><br><br>
 <hr style="height: 5px; width: 100%; background-color: #00e5ff; border: 0;" />
